--- a/manifest.json
+++ b/manifest.json
@@ -9,22 +9,22 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/img/icons/192x192.png",
+      "src": "img/icons/192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/img/icons/256x256.png",
+      "src": "img/icons/256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/img/icons/384x384.png",
+      "src": "img/icons/384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/img/icons/512x512.png",
+      "src": "img/icons/512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
